--- a/demo02/android/app/src/main/AndroidManifest.xml
+++ b/demo02/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,15 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" >
+    <uses-permission android:name="android.permission.INTERNET"/>
+     <!-- 音频权限 -->
+     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <application
-        android:label="demo02"
+        android:label="测试apk"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
