--- a/demo02/pubspec.yaml
+++ b/demo02/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flame_audio: ^2.11.3
   uuid: ^4.5.1
   intl: ^0.20.2
+  flutter_native_splash: ^2.4.6
 
 dev_dependencies:
   flutter_test:
