--- a/demo02/pubspec.yaml
+++ b/demo02/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   uuid: ^4.5.1
   intl: ^0.20.2
   flutter_native_splash: ^2.4.6
+  shared_preferences: ^2.5.3
+  dio: ^5.8.0+1
+  webview_flutter: ^4.11.0
+  easy_refresh: ^3.4.0
 
 dev_dependencies:
   flutter_test:
